tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_7.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let map<From To>
  : | [From] | From => To => [To]
  = | xs f => xs.(
      | [] => []
      | [head .._] => [head.f]
    )

let result: [String] = [{x: 2}].map(| o => o.x)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_7.kk:8:24
  │
8 │ let result: [String] = [{x: 2}].map(| o => o.x)
  │                        ^^^^^^^^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    |   [           |   [         |
    | -   String    | +   Integer |
    |   ]           |   ]         |
    +---------------+-------------+
